Typo: Theorem BS, missing comma after ellipsis (Mira Schoeberlein)
Typo: Example COV, "the a" is just "the" (Maggie Hatt)
Typo: Sage RES, "commments" (Maggie Hatt)
Typo: Sage EVIC, misplaced question-mark for QQbar print representation (Nathan Schultz)
Typo: Property DSAM, add a space (Mira Schoeberlein)
Typo: Definition TM, add a space (Mira Schoeberlein)


v3.50 2015/12/30
~~~~~~~~~~~~~~~~
New: Exercise SSLE.C53, a 2x2 system from The Economist
New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
New: Exercises MR.T40, MR.T41, vector space of linear transformations (Chili Johnson)
Change: Annotated Acronyms, Chapter R, removed three obsolete items
Change: Exercise PD.M50, deleted, now obsolete
Change: Remove matrix inverse Archetype commentary for rectangular matrices
Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
Edit: Examples CROB4, CROB3, had old-style inner products (Chris Thron)
Edit: Streamline half of proof of Theorem NPNT
Edit: Example FS1, clarified submatrices of extended echelon form (Chili Johnson)
Edit: Definition EEF, matrix M needed to be typeset as math (Jordan Fonseca)
Edit: Example FSAG, clarified two vectors are from spanning set (Chili Johnson)
Edit: Theorem SMEZV, additional justification in proof
Edit: Theorem SSLD, justifications in alternate proof (Chili Johnson)
Edit: Theorem AISM, added missing justification in proof (Jonathan Adams)
Edit: Improved justifications for eigenstuff proofs
Edit: Definition ELEM, fixed scalar multiple elementary matrix (Lukas Edman)
Edit: Clarify Solution ILT.C33 (Daniel York)
Edit: Consistent notation in Subsection VR (Daniel York)
Edit: Commas in matrix space notation (Kelsey Reed)
Edit: Clarified the infinite solution set in Example TMP (Dave Perkins)
Edit: Degree of the zero polynomial discussed in Solution S.T31 (Sam Burdick)
Edit: Guard against a trivial counterexample in Exercise IVLT.T30 (Christian Schulz)