@@ -93,7 +93,7 @@
             \setparts{A\vect{x}}{\vect{x}\in\complex{n}}
             \subseteq\complex{m}</mrow>
         </md>.</p>
-        <p>We recognize this as saying create <em>all</em> the matrix vector products possible with the matrix <m>A</m> by letting <m>\vect{x}</m> range over all of the possibilities.  By <xref ref="definition-MVP" acro="MVP"/> we see that this means take all possible linear combinations of the columns of <m>A</m> <mdash/> precisely the definition of the column space (<xref ref="definition-CSM" acro="CSM"/>) we have chosen.</p>
+        <p>We recognize this as saying create <em>all</em> the matrix-vector products possible with the matrix <m>A</m> by letting <m>\vect{x}</m> range over all of the possibilities.  By <xref ref="definition-MVP" acro="MVP"/> we see that this means take all possible linear combinations of the columns of <m>A</m> <mdash/> precisely the definition of the column space (<xref ref="definition-CSM" acro="CSM"/>) we have chosen.</p>
         <p>Notice how this formulation of the column space looks very much like the definition of the null space of a matrix (<xref ref="definition-NSM" acro="NSM"/>), but for a rectangular matrix the column vectors of <m>\csp{A}</m> and <m>\nsp{A}</m> have different sizes, so the sets are very different.</p>
         <p>Given a vector <m>\vect{b}</m> and a matrix <m>A</m> it is now very mechanical to test if <m>\vect{b}\in\csp{A}</m>.  Form the linear system <m>\linearsystem{A}{\vect{b}}</m>, row-reduce the augmented matrix, <m>\augmented{A}{\vect{b}}</m>, and test for consistency with <xref ref="theorem-RCLS" acro="RCLS"/>.  Here is an example of this procedure.</p>
         <example xml:id="example-MCSM" acro="MCSM">
