@@ -919,7 +919,7 @@
                 <p>The square matrix <m>A</m> is <term>Hermitian</term> (or <term>self-adjoint</term>) if <m>A=\adjoint{A}</m>.</p>
             </statement>
         </definition>
-        <p>Again, the set of real matrices that are Hermitian is exactly the set of symmetric matrices.  In <xref ref="section-PEE" acro="PEE"/> we will uncover some amazing properties of Hermitian matrices, so when you get there, run back here to remind yourself of this definition.  Further properties will also appear in <xref ref="section-OD" acro="OD"/>.  Right now we prove a fundamental result about Hermitian matrices, matrix vector products and inner products.  As a characterization, this could be employed as a definition of a Hermitian matrix and some authors take this approach.</p>
+        <p>Again, the set of real matrices that are Hermitian is exactly the set of symmetric matrices.  In <xref ref="section-PEE" acro="PEE"/> we will uncover some amazing properties of Hermitian matrices, so when you get there, run back here to remind yourself of this definition.  Further properties will also appear in <xref ref="section-OD" acro="OD"/>.  Right now we prove a fundamental result about Hermitian matrices, matrix-vector products and inner products.  As a characterization, this could be employed as a definition of a Hermitian matrix and some authors take this approach.</p>
         <theorem xml:id="theorem-HMIP" acro="HMIP">
             <title>Hermitian Matrices and Inner Products</title>
             <idx>
@@ -963,7 +963,7 @@
     <reading-questions xml:id="readingquestions-MM">
         <exercise xml:id="reading-MM-1">
             <statement>
-                <p>Form the matrix vector product of<md>
+                <p>Form the matrix-vector product of<md>
                     <mrow>\begin{bmatrix}
                     2 &amp; 3 &amp; -1 &amp; 0\\
                     1 &amp; -2 &amp; 7 &amp; 3\\
