@@ -65,6 +65,7 @@ Typo: Sage RES, "commments" (Maggie Hatt)
 Typo: Sage EVIC, misplaced question-mark for QQbar print representation (Nathan Schultz)
 Typo: Property DSAM, add a space (Mira Schoeberlein)
 Typo: Definition TM, add a space (Mira Schoeberlein)
+Typo: Sections MO, CRS, write "matrix-vector" product (Carissa Riedesel)
 
 
 v3.50 2015/12/30
